--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             <div class="logo">MatsyaSakhi</div>
             <div class="tagline">Strength From The Sea, Led By She</div>
             <h1>Empowering Women in India's Fishing Communities</h1>
-            <p>A for-profit social enterprise empowering women through training, cooperative ownership, and ethical seafood processing.</p>
+            <p style="style:white">A for-profit social enterprise empowering women through training, cooperative ownership, and ethical seafood processing.</p>
             <a href="#about" class="btn" style="margin-top: 30px;">Learn More</a>
         </div>
     </header>
