--- a/index.html
+++ b/index.html
@@ -504,8 +504,8 @@
         <div class="container header-content">
             <div class="logo">MatsyaSakhi</div>
             <div class="tagline">Strength From The Sea, Led By She</div>
-            <h1>Empowering Women in India's Fishing Communities</h1>
-            <p style="style:white">A for-profit social enterprise empowering women through training, cooperative ownership, and ethical seafood processing.</p>
+            <h1 style="color:white">Empowering Women in India's Fishing Communities</h1>
+            <p>A for-profit social enterprise empowering women through training, cooperative ownership, and ethical seafood processing.</p>
             <a href="#about" class="btn" style="margin-top: 30px;">Learn More</a>
         </div>
     </header>
